# mxl-dmf-demo-app

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.mediamtx-mxl  README.md  docker-compose.mxl-validate.yml  go.mod  main.go  mediamtx-mxl.yml  renovate.json
.github/: release-please-config.json
.github/workflows/: build-compositor.yml  build.yml  release-please.yml
compositor/: CMakeLists.txt  Dockerfile  Dockerfile.mxlk8s
compositor/src/: main.cpp
docs/: architecture.md  booking-demo-architecture.html  booking-demo-architecture.md  ci-and-release.md  operations.md
flow-configs/: flow-video-v210.json
k8s/: composite-deployment.yaml  composite-service.yaml  deployment.yaml  ghcr-pull-secret.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  loop-deployments.yaml  mediamtx-configmap.yaml  mediamtx-deployment.yaml  mediamtx-service.yaml  mediamtx-webrtc-udp.yaml  metrics-aggregator.yaml  multiviewer-configmap.yaml  mxl-exporter-podmonitor.yaml  mxl-receivers.yaml  service.yaml  test-sources.yaml  testsrc-deployments.yaml  txdarwin-output-viewer.yaml  writer-deployment.yaml
k8s/config/: Caddyfile  index.html  mediamtx.yml
k8s/metrics/: aggregator.py
